--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ server.port=8080
 server.servlet.context-path=/security-springboot-security
 spring.application.name=security-springboot-security
 
-spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
